--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
     </section>
-    <section class="marquees-wrapper">
+<!--     <section class="marquees-wrapper">
         <div class="marquee marquee-2">
             <ul class="marquee__content scroll">
                 
@@ -82,7 +82,7 @@
                 
             </ul>
         </div>
-    </section>
+    </section> -->
     <section class="about-area padding-top padding-bottom" id="about">
         <div class="container">
             <div class="row">
