--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <div class="footer__copyright">
             <div class="container">
                 <div class="text-center py-4">
-                    <p class=" mb-0">© 2022 All Rights Reserved <a href="#" class="color--theme-color">Bitpepe</a></p>
+                    <p class=" mb-0">© 2022 All Rights Reserved <a href="#" class="color--theme-color">RABID DOGEe</a></p>
                 </div>
             </div>
         </div>
