--- a/index.html
+++ b/index.html
@@ -261,23 +261,23 @@
                     
 
                     </div>
-                <style>
+              <style>
                     .tokenomics-media img {
                       animation: heartbeat 1s ease-in-out infinite alternate;
                     }
                   
                     @keyframes heartbeat {
                       0% {
-                        transform: scale(1);
+                        transform: scale(2);
                       }
-                      50% {
-                        transform: scale(1.2);
+                      80% {
+                        transform: scale(0.1);
                       }
                       100% {
-                        transform: scale(1);
+                        transform: scale(0);
                       }
                     }
-                  </style>
+                  </style
                   </head>
                   <body>
                   <div class="col-lg-7 col-12">
