--- a/index.html
+++ b/index.html
@@ -262,15 +262,15 @@
 
                     </div>
               <style>
-                    .tokenomics-media img {
-                      animation: heartbeat 1s ease-in-out infinite alternate;
+                   .tokenomics-media img {
+                      animation: heartbeat 2s ease-in-out infinite alternate;
                     }
                   
                     @keyframes heartbeat {
-                      0% {
+                      2% {
                         transform: scale(2);
                       }
-                      80% {
+                      200% {
                         transform: scale(0.1);
                       }
                       100% {
@@ -377,22 +377,13 @@
             <div class="container">
                 <div class="footer__content text-center t">
                     <h2 class="color--gradient-y">Follow Us!</h2>
-                    <p>Stay Connected for the latest updates, news, and exciting developments in the Pepe Coin community.</p>
+                    <p>Stay Connected for the latest updates, news, and exciting developments in the RABID DOGE community.</p>
                     <ul class="social justify-content-center">
                         <li class="social__item">
                             <a href="#" class="social__link"><img src="assets/images/social/discord.png" alt="Discord"></a>
                         </li>
                         <li class="social__item">
                             <a href="https://twitter.com/RabidDogeBase" class="social__link"><img src="assets/images/social/twitter.png" alt="Twitter"></a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link"><img src="assets/images/social/instagram.png" alt="Instagram"></a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link"><img src="assets/images/social/twitch.png" alt="Twitch"></a>
-                        </li>
-                        <li class="social__item">
-                            <a href="#" class="social__link"><img src="assets/images/social/youtube.png" alt="Youtube"></a>
                         </li>
                     </ul>
                 </div>
@@ -401,7 +392,7 @@
         <div class="footer__copyright">
             <div class="container">
                 <div class="text-center py-4">
-                    <p class=" mb-0">© 2024 All Rights Reserved <a href="#" class="color--theme-color">RABID DOGE</a></p>
+                    <p class=" mb-0">© 2024 All Rights Reserved <a href="INDEX.HTML" class="color--theme-color">RABID DOGE</a></p>
                 </div>
             </div>
         </div>
